@@ -11,11 +11,12 @@ eZ Online Editor 5.0 extension Changelog
 * Misc i18n bugs fixed in pol-PL and nor-NO
 * Added tablemenu, a splitbutton that puts all table commands into a sub menu to save menu space.
 * Added support for TinyMCE spellchecker plugin (thx to Carlos Revillo)
-* Fixed #013954: Applying a custom tag to a text can change this text
+* Fixed #13954: Applying a custom tag to a text can change this text
 * Added custom tag view template for underline
 * Implemented new custom attribute types: htmlsize, csssize and csssize4
 * Implemented possibility to limit some embed settings pr content type
-* Fixed #013990: Text editor - Formatting bullets removes text
+* Fixed #13990: Text editor - Formatting bullets removes text
+* Fixed #13755: Anchor not displaying anchor name in IE7/8 (WinXP) - 5.0.0rc7
 
 5.0rc7
 * Changed javascript / stylesheet cache to use 'public/' path
